// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GenBank export can export a feature with subfeatures (mRNA, CDS, exon) 1`] = `
"LOCUS       chr1_1001..2000         1000 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:1001..2000 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..1000
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..1000
                     /gene="gene2"
                     /label="gene2"
     mRNA            join(1..200,801..1000)
                     /gene="gene2"
                     /label="mrna1"
     CDS             join(51..150,851..950)
                     /gene="gene2"
                     /label="gene2"
                     /codon_start=1
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      301 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      361 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      421 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      481 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      541 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      601 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      661 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      721 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      781 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      841 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      901 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      961 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export can export a simple feature 1`] = `
"LOCUS       chr1_101..200            100 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:101..200 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..100
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..100
                     /label="gene_name"
                     /note="some note"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export formats ORIGIN section with proper line breaks for long sequences 1`] = `
"LOCUS       chr1_1..150              150 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:1..150 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..150
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..150
                     /label="gene7"
ORIGIN
        1 acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt
       61 acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt acgtacgtac gtacgtacgt
      121 acgtacgtac gtacgtacgt acgtacgtac
//
"
`;

exports[`GenBank export handles custom attributes 1`] = `
"LOCUS       chr1_701..800            100 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:701..800 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..100
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..100
                     /label="gene6"
                     /custom_tag="custom_value"
                     /another_tag="val1,val2"
                     /complex_obj="{""key"":""value""}"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export handles features on negative strand 1`] = `
"LOCUS       chr1_501..600            100 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:501..600 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..100
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            complement(1..100)
                     /gene="gene5"
                     /label="gene5"
     mRNA            complement(1..100)
                     /gene="gene5"
                     /label="mrna2"
     CDS             complement(21..80)
                     /gene="gene5"
                     /label="gene5"
                     /codon_start=1
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export handles mRNA with only exons (no CDS) 1`] = `
"LOCUS       chr1_1..500              500 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:1..500 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..500
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..500
                     /gene="gene11"
                     /label="gene11"
     mRNA            join(1..100,401..500)
                     /gene="gene11"
                     /label="mrna4"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      301 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      361 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      421 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      481 aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export handles multiple top-level features 1`] = `
"LOCUS       chr1_101..400            300 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:101..400 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..300
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..100
                     /label="gene3"
     gene            201..300
                     /label="gene4"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      241 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export handles single CDS without join() wrapper 1`] = `
"LOCUS       chr1_101..300            200 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:101..300 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..200
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     gene            1..200
                     /gene="gene8"
                     /label="gene8"
     mRNA            1..200
                     /gene="gene8"
                     /label="mrna3"
     CDS             21..180
                     /gene="gene8"
                     /label="gene8"
                     /codon_start=1
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      121 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
      181 aaaaaaaaaa aaaaaaaaaa
//
"
`;

exports[`GenBank export truncates long feature type names to 16 characters 1`] = `
"LOCUS       chr1_1..100              100 bp    DNA    linear    UNK 10-JAN-1970
DEFINITION  chr1:1..100 from testAssembly.
ACCESSION   chr1
VERSION     chr1
KEYWORDS    .
SOURCE      testAssembly
  ORGANISM  testAssembly
            .
FEATURES             Location/Qualifiers
     source          1..100
                     /organism="testAssembly"
                     /mol_type="genomic DNA"
                     /chromosome="chr1"
     very_long_featu 1..100
                     /label="gene9"
ORIGIN
        1 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
       61 aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa aaaaaaaaaa
//
"
`;
